# Valorant-Stats-App

./: .env  .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
app/: __init__.py  config.py  oauth.py  routes.py  utils.py
templates/: base.html  dashboard.html  home.html
