[tool.poetry]
name = "valorant-stats-app"
version = "0.1.0"
description = "A Flask application to display Valorant stats."
authors = ["Allen Cheung"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.0"
uvicorn = "^0.18.3"
requests = {extras = ["security"], version = "^2.28.1"}
python-dotenv = "^0.21.0"
flask = "^2.0.1"
authlib = "^0.15.3"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.9"
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"